<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Supanth</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="current_tab">Current</string>
    <string name="loading_more_data">Loading more data. . .</string>
    <string name="share_facebook">Share FB</string>
    <string name="back">Back</string>
    <string name="app_id">477588132332247</string>
    <string name="story_portal_url">http://www.supanth.com/feed/</string>
    <string name="app_icon_url">http://www.anony.ws/i/2013/06/27/qL13W.jpg</string>
    <string name="intro_text">Beautiful are the feet, that treads forever the path of the Mission. that leaves their auspicious footprints on the desert sands of time!</string>
    <string name="search">Search</string>
    <string name="share_fb">Share on Facebook</string>
    <string name="share_twitter">Share on Twitter</string>
    <string name="share_gplus">Share on Google +</string>
    <string name="coming_soon">Coming Soon. . .</string>
    <string name="coming_soon_descr">- PUSH notifications on new story\n- Offline support\n- Comment on stories\n- Share on Twitter\n- Share on Google Plus\n- User experience enhancement\n- Improved icons\n</string>
    <string name="why_supanth">Why Supanth?</string>
    <string name="why_supanth_descr">Switch on to any news channel. Turn page of any news paper or magazine. What are the head lines, breaking news, Just Ins? News related to Scam, Scandal, Bribery, Rape, Molesting, Racism, Uncertainty, Disbelief, Riots, Bombing, Shooting, Killing, Suicides and what not???

Think of anything bad and it\'s there in the news. Why so? No News is good news. If that\'s the motivation of the news and media, what else you expect to reach up to us? Whatever and everything that is bad, negative, awful, terrible, appalling, horrifying, ghastly, shocking, dried, pessimistic, unenthusiastic, nonconstructive or harmful is coming to us each and every minute. We are bombarded with negativity from everywhere for each second.
Such news makes us depressed. They cause social unrest. This leads to miserable personal and social life.
\n
Whoops. Take a deep breath…
\n
Is there anything good happening around us? Where are the good people and their good work? I get hardly any news of such kind in approximately 12 page news papers or 24X7 news channels.
\n
The answer is \"Definitely Yes\", there are good people around us including thyself. We see many people trying to answer questions that we face in day to day life. Be it corruption or any unlawful activity. Be it education or health issue. People are trying to find answer to these and many other questions.
\n
There are people who take an unusual path for life and they succeed. There are organizations that pick up a question and try to answer it… There are many real unknown heroes who just do it and forget it.
\n
But they work either in isolation or they are so deeply involved in their work that they just forget to tell people about it. In many cases the voice is unheard and attempts unnoticed.
\n
These are the people on \'Supanth\'. Supanth meaning \"THE GOOD WAY\"
\n
Supanth wants such news, people and organizations heard by millions and billions.
\n
So whenever you feel depressed with negativity, just follow Supanth and feel better, get energized and get back to do more and more better things, help people, help organizations.
\n
Just Follow Supanth</string>

</resources>
