<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#99000000"
    android:id="@+id/about_outer_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginLeft="40dp"
	    android:layout_marginTop="40dp"
	    android:layout_marginRight="40dp"
	    android:layout_marginBottom="40dp"
	    android:background="#000000"
        >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="3dp"
	    android:layout_marginBottom="3dp"
	    android:orientation="vertical">

	    <TextView
	        android:layout_marginTop="5dp"
		    android:layout_marginLeft="3dp"
		    android:layout_marginRight="3dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/coming_soon"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:layout_marginTop="5dp"
		    android:layout_marginLeft="3dp"
		    android:layout_marginRight="3dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/coming_soon_descr"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    <TextView
	        android:layout_marginTop="10dp"
		    android:layout_marginLeft="3dp"
		    android:layout_marginRight="3dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/why_supanth"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:layout_marginTop="5dp"
		    android:layout_marginLeft="3dp"
		    android:layout_marginRight="3dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/why_supanth_descr"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
   </LinearLayout>
</ScrollView>
</RelativeLayout>