<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0" >

    <TextView
        android:id="@+id/blog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/blog_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/blog_title"
        android:layout_marginLeft="5dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/blog_published_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/blog_author"
        android:layout_alignBottom="@+id/blog_author"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	<ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@+id/details_buttons_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/blog_author"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

	    <TextView
	        android:id="@+id/blog_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

    </ScrollView>

<LinearLayout
    android:id="@+id/details_buttons_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="6dp"
    android:orientation="horizontal" >
    <View
        android:id="@+id/back_gap_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@null"
        android:contentDescription="@string/back" />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
    <ImageButton
        android:id="@+id/share_fb_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share_fb"
        android:background="@null"
        android:contentDescription="@string/share_fb" />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
    <ImageButton
        android:id="@+id/share_twitter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:background="@null"
        android:src="@drawable/ic_share_twitter"
        android:contentDescription="@string/share_twitter" />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
    <ImageButton
        android:id="@+id/share_gplus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_share_gplus"
        android:contentDescription="@string/share_gplus" />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
</LinearLayout>

</RelativeLayout>
